<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/manager_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:text="@string/ManageCar"
        android:textColor="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manager_car"
        android:layout_marginTop="2dp"
        android:text="@string/app_alarm" />

    <LinearLayout
        android:id="@+id/setting01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_settings"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ToastAlert"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/toastalert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:switchTextAppearance="@style/SwitchTheme"
            android:textOff="@string/SwitchOff"
            android:textOn="@string/SwitchOn"
            android:textSize="24sp"
            android:thumb="@drawable/switch_rectangle_thumb_selector"
            android:track="@drawable/switch_rectangle_track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting01"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VibrationAlert"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/vibrationalert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:switchTextAppearance="@style/SwitchTheme"
            android:textOff="@string/SwitchOff"
            android:textOn="@string/SwitchOn"
            android:textSize="24sp"
            android:thumb="@drawable/switch_rectangle_thumb_selector"
            android:track="@drawable/switch_rectangle_track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting02"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settingtext01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SoundAlert"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/soundalert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:switchTextAppearance="@style/SwitchTheme"
            android:textOff="@string/SwitchOff"
            android:textOn="@string/SwitchOn"
            android:textSize="24sp"
            android:thumb="@drawable/switch_rectangle_thumb_selector"
            android:track="@drawable/switch_rectangle_track" />

    </LinearLayout>

</RelativeLayout>